[package]
name = "rustserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
headers = "0.4.0"
tokio-tungstenite = "0.26.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
